--- a/assets/styles.css
+++ b/assets/styles.css
@@ -126,17 +126,18 @@ section {
 
 #hero {
   /* padding: 4rem 2rem;  */
+  padding: 0;
   /* background: #1a202c;  */
-  color: white; 
+  /* color: white; 
   display: flex; 
   align-items: center; 
   justify-content: center; 
-  min-height: 100vh; 
+  min-height: 100vh;  */
   z-index: 0; 
 }
 @media (max-width: 768px) {
   #hero {
-    padding: 1rem;
+    /* padding: 1rem; */
     /* min-height: 80vh; */
   }
   .hero-text {
@@ -144,14 +145,61 @@ section {
     max-width: 100%;
   }
 }
-#hero-canvas { 
-  opacity: 0.3; 
-} /* Low opacity for subtle effect */
-
+.hero-container {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  /* overflow: hidden; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: white; 
+  min-height: 100vh; 
+}
+.hero-title {
+  font-size: clamp(3rem, 3.75rem, 3.75rem);
+  line-height: normal;
+  /* white-space: nowrap; */
+}
+.hero-title span {
+  white-space: nowrap;
+}
 .hero-text {
+  margin-top: 0.5rem;
   font-size: 1.25rem;
   max-width: 600px;
   transform-style: flat; /* Ensure 2D context */
+}
+.hero-text span {
+  white-space: nowrap;
+}
+.scroll-indicator {
+  position: absolute;
+  /* Adjust positioning as needed */
+  bottom: 33vh; 
+  left: 50%;
+  transform: translateX(-50%);
+  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
+  
+  font-size: 0.875rem;
+  color: #FFFFFF;
+}
+
+.scroll-indicator span {
+  /* text-transform: uppercase; */
+  /* letter-spacing: 0.1em; */
+}
+
+/* For the SVG or icon */
+.scroll-indicator svg {
+  width: 1rem;
+  height: 1rem;
+  stroke: #FFFFFF;
 }
 
 #hero-canvas {
@@ -388,6 +436,7 @@ section {
 @media (max-width: 768px) {
   #experience { padding: 0 2rem;}
   .experience-title {
+    font-size: 1.7rem; 
     background-color: #3b3a41;
     height: 5.5rem;
     width: 100vw;
@@ -418,9 +467,24 @@ section {
   border-radius: 50%; 
 }
 @media (max-width: 768px) {
-  #skills { min-height: 100vh; }
-  .skills-content { min-height: 80vh; }
-  .skill-icon { width: 40px; height: 40px; }
+  /* #skills { min-height: 100vh; } */
+  /* .skills-content { min-height: 80vh; } */
+  /* .skill-icon { width: 40px; height: 40px; } */
+
+  #skills { padding: 0 2rem;}
+  .skills-title {
+    /* font-size: 1.7rem;  */
+    background-color: #deefff;
+    height: 5.5rem;
+    width: 100vw;
+    position: relative;
+    top: -1px;
+    left: -2rem;
+    align-content: center;
+    /* box-shadow: 0 10px 8px 0px #3b3a41; */
+    z-index: 5;
+  }
+
 }
 
 #contact {
